# fmm

./: .fmm.db  .fmmrc.json  .gitignore  .release-please-manifest.json  ALP-917-HANDOVER-iter3.md  ALP-917-HANDOVER.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING_LANGUAGE.md  Cargo.toml  EXPERIMENT.md  MAP.SKILL.md  MAP.md  Makefile  PROJECT.md  PROMPT.review.md  README.md  ROADMAP.md  STATUS.md  TLDR.md  build.rs  build.rs.fmm  justfile  project.md  release-please-config.json  review.md  tools.toml
.fmm/: index.json
crates/fmm-cli/: Cargo.toml  build.rs  tools.toml
crates/fmm-cli/benches/: parser_benchmarks.rs
crates/fmm-cli/fixtures/: sample.cpp  sample.ex  sample.swift
crates/fmm-cli/src/: cycle_report.rs  filename_glob.rs  fs_utils.rs  git.rs  glossary.rs  lib.rs  main.rs  manifest_ext.rs  outline_freshness.rs  read_symbol.rs
crates/fmm-cli/src/cli/: command_tree.rs  files.rs  generated_help.rs  glossary.rs  help_text.rs  init.rs  mod.rs  resolve.rs  search.rs  search_tests.rs  sidecar.rs  status.rs  watch.rs
crates/fmm-cli/src/cli/commands/: clean.rs  completions.rs  cycles.rs  deps.rs  dupes.rs  exports.rs  generate.rs  glossary.rs  init.rs  lookup.rs  ls.rs  mod.rs  outline.rs  read.rs  search.rs  similar.rs  validate.rs  watch.rs
crates/fmm-cli/src/cli/sidecar/: output.rs  parse.rs  staleness.rs
crates/fmm-cli/src/db/: mod.rs  reader.rs  writer.rs  writer_tests.rs
crates/fmm-cli/src/format/: helpers.rs  list_formatters.rs
crates/fmm-cli/src/manifest/: glossary_builder.rs
crates/fmm-cli/src/manifest/call_site_finder/: rust.rs  typescript.rs
crates/fmm-cli/src/manifest/private_members/: typescript.rs
crates/fmm-cli/src/mcp/: args.rs  generated_schema.rs  mod.rs  snapshot_tests.rs  tests.rs
crates/fmm-cli/src/mcp/snapshots/: fmm__mcp__snapshot_tests__fmm_dependency_graph.snap  fmm__mcp__snapshot_tests__fmm_file_outline.snap  fmm__mcp__snapshot_tests__fmm_glossary.snap  fmm__mcp__snapshot_tests__fmm_list_exports_all.snap  fmm__mcp__snapshot_tests__fmm_list_exports_file.snap  fmm__mcp__snapshot_tests__fmm_list_exports_pattern.snap  fmm__mcp__snapshot_tests__fmm_list_files.snap  fmm__mcp__snapshot_tests__fmm_list_files_directory.snap  fmm__mcp__snapshot_tests__fmm_list_files_grouped.snap  fmm__mcp__snapshot_tests__fmm_list_files_pattern.snap  (+6 more)
crates/fmm-cli/src/parser/: mod.rs
crates/fmm-cli/src/read_symbol/: member_error.rs
crates/fmm-cli/src/resolver/: workspace.rs
crates/fmm-cli/src/search/: bare_search.rs  dependency_graph.rs  dependency_graph_transitive.rs  filter_search.rs  helpers.rs
crates/fmm-cli/templates/: SKILL.md
crates/fmm-cli/tests/: cli_deps.rs  cli_dupes.rs  cli_exports.rs  cli_file_diagnostics.rs  cli_flags.rs  cli_git_metadata.rs  cli_glossary.rs  cli_integration.rs  cli_ls.rs  cli_output_parity.rs  cli_read.rs  cli_search.rs  cli_similar.rs  cross_language_validation.rs  cross_package_resolution.rs  edge_cases.rs  fixture_validation.rs  glossary.rs  mcp_protocol.rs  mcp_tools.rs  multi_lang_integration.rs  named_import_precision.rs  sidecar_loc.rs
crates/fmm-cli/tests/cli_output_parity/: cases.rs  normalize.rs  parse.rs  support.rs
crates/fmm-cli/tests/cli_read/: member_errors.rs
crates/fmm-cli/tests/mcp_tools/: dependency_graph.rs  dupes.rs  file_outline.rs  glossary.rs  go_resolution.rs  list_exports.rs  lookup_export.rs  manifest.rs  read_symbol.rs  search_combined_filters.rs  search_export.rs  search_filters.rs  search_multi_filters.rs  search_terms.rs  similar.rs  support.rs
crates/fmm-cli/tests/snapshots/: cli_dupes__dupes_text_output.snap
crates/fmm-core/: Cargo.toml
crates/fmm-core/benches/: parser_benchmarks.rs
crates/fmm-core/src/: dupes.rs  error.rs  lib.rs  similarity.rs  store.rs  types.rs
crates/fmm-core/src/config/: defaults.rs  loader.rs  mod.rs  tests.rs
crates/fmm-core/src/convention/: mod.rs
crates/fmm-core/src/format/: list_formatters.rs  mod.rs  search_formatters.rs  yaml_formatters.rs  yaml_formatters_tests.rs
crates/fmm-core/src/graph/: cycles.rs  mod.rs
crates/fmm-core/src/identity/: mod.rs
crates/fmm-core/src/manifest/: dependency_matcher.rs  dependency_matcher_deno_tests.rs  dependency_matcher_go_tests.rs  dependency_matcher_review_tests.rs  dependency_matcher_tests.rs  file_entry.rs  glossary_builder.rs  mod.rs  reexports.rs  reverse_index.rs  test_classification.rs  tests.rs
crates/fmm-core/src/parser/: mod.rs  registry.rs  tests.rs  types.rs
crates/fmm-core/src/resolver/: deno.rs  deno_tests.rs  go.rs  mod.rs  module_hierarchy.rs  rust.rs  rust_path.rs  rust_review_tests.rs  rust_tests.rs  workspace.rs  workspace_deno_tests.rs  workspace_go.rs  workspace_python.rs  workspace_review_tests.rs  workspace_tests.rs
crates/fmm-core/src/search/: bare_search.rs  dependency_cycles.rs  dependency_graph.rs  dependency_graph_transitive.rs  filter_search.rs  graph_query.rs  helpers.rs  mod.rs  tests.rs
crates/fmm-core/tests/: convention_contract.rs  dependency_cycles.rs  fixture_validation.rs  graph.rs  identity.rs  parser_cross_language.rs  parser_edge_cases.rs
crates/fmm-core/tests/fixture_validation/: c.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  go.rs  java.rs  kotlin.rs  lua.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  support.rs  swift.rs  template.rs  typescript.rs  zig.rs
crates/fmm-core/tests/parser_cross_language/: c.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  go.rs  java.rs  kotlin.rs  lua.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  support.rs  swift.rs  typescript.rs  zig.rs
crates/fmm-core/tests/parser_edge_cases/: c.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  go.rs  java.rs  kotlin.rs  lua.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  support.rs  swift.rs  typescript.rs  zig.rs
crates/fmm-store/: Cargo.toml
crates/fmm-store/src/: connection.rs  error.rs  lib.rs  memory_store.rs  reader.rs  schema.rs  sqlite_store.rs  writer.rs  writer_tests.rs
crates/fmm-store/src/memory_store/: manifest.rs  mod.rs  state.rs  tests.rs
crates/fmm-store/src/reader/: exports.rs  file_paths.rs  files.rs  mod.rs  reverse_deps.rs  workspace.rs
(+762 files in other folders)
