[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Stuart Robinson <stuart@alphabio.com>"]
license = "MIT"
repository = "https://github.com/srobinson/fmm"
homepage = "https://srobinson.github.io/fmm/"

[workspace.dependencies]
# Internal crates
fmm-core = { path = "crates/fmm-core" }
fmm-store = { path = "crates/fmm-store" }

# Parsing
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c = "0.24"
tree-sitter-zig = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-scala = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-dart-orchard = "0.3"
streaming-iterator = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
clap_mangen = "0.2"
clap-markdown = "0.1"
color-print = "0.3"
colored = "3.0"

# File handling
ignore = "0.4"
notify = "8.2"
notify-debouncer-full = "0.7"
ctrlc = "3.4"

# Parallelism
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["parse"] }
indexmap = { version = "2", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Pattern matching
regex = "1"
glob = "0.3"

# Cross-package resolution
oxc_resolver = "11"

# Testing
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.42"
assert_cmd = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.bench]
opt-level = 3
lto = false
