[package]
name = "fmm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Auto-generate code metadata sidecars for LLM-optimized navigation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "code-analysis", "ast", "mcp", "sidecar"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".nancy/", "docs/"]

[dependencies]
# Core domain logic (parser, search, manifest, format)
fmm-core.workspace = true

# Tree-sitter (still used by manifest/call_site_finder and private_members
# until those modules move to fmm-core in ALP-1482)
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
streaming-iterator.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
clap-markdown.workspace = true
color-print.workspace = true
colored.workspace = true

# File handling
ignore.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
ctrlc.workspace = true

# Parallelism
rayon.workspace = true
indicatif.workspace = true

# Database
rusqlite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Date/time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Pattern matching
regex.workspace = true
glob.workspace = true

# Cross-package import resolution
oxc_resolver.workspace = true

[build-dependencies]
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
rusqlite = { workspace = true, features = [] }

[[bin]]
name = "fmm"
path = "src/main.rs"

[[bench]]
name = "parser_benchmarks"
harness = false
