[package]
name = "fmm-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fmm-core.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
